# pidc-plasma-cpp

./: .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CODEX.md  GEMINI.md  MANIFEST.md  README.md  ROADMAP.md  TODO.md
ai_logs/: 2026-05-08_claude_auditoria_fases_0abc.md  2026-05-08_claude_revisao_arquitetura.md  2026-05-08_claude_t007_shape_function_data.md  2026-05-08_claude_t010_rescue_species.md  2026-05-08_claude_t011_weight_function.md  2026-05-08_claude_t012_polynomial_basis.md  2026-05-08_claude_t017_mls_shape_function.md  2026-05-08_claude_t019_arch_review_mls_efg.md  2026-05-08_claude_t021_gradient_verification.md  2026-05-08_claude_t029_contract_review.md  2026-05-08_claude_t034_t033_penalty_sparse_plan.md  2026-05-08_codex_bootstrap_minimo.md  2026-05-08_codex_implement-regular-node-cloud-T018.md  2026-05-08_codex_remove_apply_periodic.md  2026-05-08_codex_review_t018_docs.md  2026-05-08_codex_t005_test_framework.md  2026-05-08_codex_t009_node_cloud.md  2026-05-08_codex_t016_eigen_cmake.md  2026-05-08_codex_t024_mls_robustness.md  2026-05-08_codex_t025_neighbor_search_grid.md  2026-05-08_codex_t026_periodic_boundary2d.md  2026-05-08_codex_t032_poisson_mms_field_metrics.md  2026-05-08_codex_t035_sparse_poisson_solver.md  2026-05-08_codex_t_poisson_mms.md  2026-05-08_gemini_audit-efg-poisson-T031.md  2026-05-08_gemini_audit-equations-T002.md  2026-05-08_gemini_audit-mls-gradient-T020.md  2026-05-08_gemini_confirm-mls-fix-T022.md  2026-05-08_gemini_decide-node-volume-T023.md  2026-05-08_gemini_propose-eigen-task-T015.md  2026-05-08_gemini_review-cleanup-T014.md  2026-05-08_gemini_sync-todo-T013.md  2026-05-09_claude_architecture-review-T036.md  2026-05-09_claude_charge-conservation-T037.md  2026-05-09_claude_t-claude-f-arch-review-pidc-loop.md  2026-05-09_claude_t-marco3-deferred.md  2026-05-09_claude_t-review-e.md  2026-05-09_claude_t038c_pic_architecture.md  2026-05-09_claude_t039_cic_deposition.md  2026-05-09_claude_t040c_sync_phase_e_numbering.md  (+19 more)
apps/: README.md  marco3_mms_diagnostics.cpp  phase_e_diagnostics.cpp  pidc_smoke_2d.cpp  smoke.cpp
configs/: README.md
data/output/: README.md
data/reference/: README.md
docs/: 00_visao_geral.md  01_mapa_tese_para_codigo.md  02_arquitetura_repositorio.md  03_modelo_matematico_minimo.md  04_validacoes_referencia.md  05_fluxo_de_trabalho_ias.md  06_plano_primeira_semana.md  07_riscos_tecnicos.md  08_prompt_inicial_para_cada_ia.md
docs/ai/: 2026-05-08_gemini_audit-validation-risks-T028-T030.md  AI_BOARD.md  AI_STATUS.md  CURRENT_CONTEXT.md  DECISIONS.md  HANDOFF_TEMPLATE.md  OPEN_QUESTIONS.md  PHASE_E_PIC1D_PLAN.md  PHASE_E_PIC1D_TECH_PLAN.md  PROMPTS.md  RISKS.md
docs/ai/CLAUDE_TASKS/: T_CLAUDE_F_ARCH_REVIEW_PIDC_LOOP.md
docs/ai/GEMINI_TASKS/: T_GEMINI_F_AUDIT_PIDC_RHS_DOMAINS.md  T_GEMINI_F_READINESS.md
docs/dev/: TEST_REPORT.md
docs/validation/: VALIDATION_PLAN.md  comparison_plan_pic_pidc.md  marco3_poisson_efg_validation.md
include/pidc/: Domain2D.hpp  Node.hpp  Particle.hpp  README.md  ShapeFunctionData.hpp  Species.hpp  Vec2.hpp
include/pidc/efg/: EFGPoissonSolver.hpp  GaussCell2D.hpp
include/pidc/geometry/: NeighborSearchGrid.hpp  NodeCloud.hpp  PeriodicBoundary2D.hpp  RegularNodeCloud2D.hpp
include/pidc/mls/: InfluenceDomain.hpp  MLSConfig.hpp  MLSShapeFunction.hpp  PolynomialBasis.hpp  WeightFunction.hpp
include/pidc/pic/: ChargeDeposition1D.hpp  FieldInterpolation1D.hpp  Grid1D.hpp  Langmuir1D.hpp  LeapFrog1D.hpp  ManufacturedField1D.hpp  PoissonSolver1D.hpp
include/pidc/pidc/: ChargeDeposition.hpp  DiffuseCell.hpp  PIDCFieldInterpolator.hpp  PIDCLoop.hpp
scripts/: README.md  build.sh  plot_efg_mms.py  plot_phase_e.py  run_tests.sh
src/: Domain2D.cpp  README.md
tests/: README.md  test_charge_conservation.cpp  test_cic_deposition_1d.cpp  test_cic_deposition_reference_1d.cpp  test_efg_poisson_external_rhs.cpp  test_efg_poisson_mms.cpp  test_eigen_dependency.cpp  test_field_interpolation_1d.cpp  test_gauss_cell2d.cpp  test_influence_domain.cpp  test_langmuir_1d.cpp  test_leapfrog_1d.cpp  test_manufactured_field_1d.cpp  test_mls_robustness.cpp  test_mls_shape_function.cpp  test_neighbor_search_grid.cpp  test_node_cloud.cpp  test_periodic_boundary.cpp  test_periodic_boundary2d.cpp  test_pic_grid1d.cpp  test_pic_periodic_motion_1d.cpp  test_pidc_diffuse_cell.cpp  test_pidc_field_interpolation.cpp  test_pidc_loop.cpp  test_poisson_solver_1d.cpp  test_polynomial_basis.cpp  test_regular_node_cloud.cpp  test_shape_function_data.cpp  test_species.cpp  test_utils.hpp  test_weight_function.cpp
